--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
   font-family: 'Josefin Sans', sans-serif;
 }
 
+body{
+  background-image: linear-gradient(90deg, #7d5fff, #7158e2);
+}
+
 .slider{
   width: 60%;
   height: 70vh;
